--- a/assets/style.css
+++ b/assets/style.css
@@ -20,9 +20,7 @@ img {
   --block-1: #2b5eea;
   --block-2: #f0f0f0;
   --block-3: #1b1b1b;
-  --block-4: #5e0009;
-  --block-5: #460002;
-  --block-6: #da1d88;
+  --block-4: #da1d88;
 }
 /* end #color palette */
 
@@ -167,12 +165,15 @@ p {
 }
 
 .bg-3 {
-  background-color: var(--block-2);
+  background-image: url(../assets/images/onde\ 2.png);
   padding-top: 50px;
   padding-bottom: 50px;
+  background-size: contain;
+  background-repeat:round;
 }
 
 .rectangle4 {
+  margin-top: 100px;
   height: 500px;
   width: 40%;
 }
@@ -183,6 +184,7 @@ p {
 }
 
 .move-l {
+  margin-top: 100px;
   text-align: left;
   padding-left: 10px;
   vertical-align: middle;
@@ -220,17 +222,22 @@ h1.move-r7 {
 
 /* fifth section */
 .bg-5 {
-  background-color: var(--block-2);
   padding-top: 50px;
   padding-bottom: 50px;
+  background-image: url(../assets/images/waves.png);
+  background-size: cover;
 }
 
 .rectangle8 {
-  height: 1000px;
+  height: 1100px;
   width: 70%;
   text-align: center;
   vertical-align: middle;
   font-family: Whitney, "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+.tecnology{
+  padding-top: 100px;
 }
 
 .img-5 {
@@ -256,7 +263,7 @@ h2 {
   margin-right: 10px;
   margin-left: 10px;
   margin-top: 25px;
-  background-color: var(--block-6);
+  background-color: var(--block-4);
   color: white;
 }
 /* end fifth section */
@@ -276,12 +283,12 @@ footer {
 }
 
 .first-d {
-  width: 20%;
+    width: 30%;
 }
 
 .title-f {
   text-align: left;
-  color: var(--block-6);
+  color: var(--block-4);
   font-family: Whitney, "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
@@ -323,7 +330,7 @@ span {
 
 .second-d {
   width: 10%;
-  color: var(--block-6);
+  color: var(--block-4);
   font-family: Whitney, "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
@@ -345,7 +352,7 @@ span {
 
 /* footer bottom  */
 .color-w {
-  border-bottom: 0.5px solid var(--block-6);
+  border-bottom: 0.5px solid var(--block-4);
   margin-bottom: 25px;
   margin-left: 230px;
   margin-right: 230px;
@@ -370,7 +377,7 @@ span {
   font-weight: bold;
   margin-right: 10px;
   margin-left: 10px;
-  background-color: var(--block-6);
+  background-color: var(--block-4);
   color: white;
 }
 /* end footer bottom */
